finish book CRUD
